--- a/index.html
+++ b/index.html
@@ -11,17 +11,27 @@
 <body>
     <header class="header">
         <div class="container">
-        <a href="" class="logo">
-            <img src="./src/img/icons/apex-white-nav-logo.svg" alt="" class="logo__img">
-        </a>
+            <a href="" class="logo">
+                <img src="./src/img/icons/apex-white-nav-logo.svg" alt="" class="logo__img">
+            </a>
 
-        <nav class="nav">
-            <a href="#!" class="nav__link">Инфо</a>
-            <a href="#!" class="nav__link">Способности</a>
-            <a href="#!" class="nav__link">Издание</a>
-        </nav>
-    </div>
+            <nav class="nav">
+                <a href="#!" class="nav__link">Инфо</a>
+                <a href="#!" class="nav__link">Способности</a>
+                <a href="#!" class="nav__link">Издание</a>
+            </nav>
+        </div>
     </header>
+
+    <main class="main">
+        <section class="video">
+            <div class="container">
+                <video src="./src/videos/apex-hero-medium-video-legend-octane.webm" class="video__src" autoplay loop muted width="1920" poster="./src/img/images/poster.png">
+                    ТВОЙ БРАУЗЕР ГОВНО ИДИ НОВЫЙ УСТАНАВЛИВАЙ
+                </video>
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
