Сделали секцию special

--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
 
                     <section class="character__description">
                         <p class="character__biography">
-                            Знакомьтесь - это Октейн, <mark class="character__mark">самый быстрый человек на фронтире</mark>. Пришел в игры Апекс за острыми
+                            Знакомьтесь - это Октейн, <mark class="character__mark">самый быстрый человек на
+                                фронтире</mark>. Пришел в игры Апекс за острыми
                             ощущениями и показать себя. По праву считаетсясамым экстремальной легендой и вот почему...
                         </p>
 
@@ -86,12 +87,18 @@
 
                 <aside class="character__additional">
                     <ul class="character__additional-list">
-                        <li class="character__additional-item"><span class="character__additional-name">Настоящее имя: 	Октавио Сильва</span></li>
-                        <li class="character__additional-item"><span class="character__additional-name">Возраст: </span>24</li>
-                        <li class="character__additional-item"><span class="character__additional-name">Родной мир: </span>Псамат</li>
-                        <li class="character__additional-item"><span class="character__additional-name">Тактическое умение: </span>Ускорение</li>
-                        <li class="character__additional-item"><span class="character__additional-name">Пассивное умение: </span>Регенерация</li>
-                        <li class="character__additional-item"><span class="character__additional-name">Ультимейт: </span>Батут</li>
+                        <li class="character__additional-item"><span class="character__additional-name">Настоящее имя:
+                                Октавио Сильва</span></li>
+                        <li class="character__additional-item"><span class="character__additional-name">Возраст:
+                            </span>24</li>
+                        <li class="character__additional-item"><span class="character__additional-name">Родной мир:
+                            </span>Псамат</li>
+                        <li class="character__additional-item"><span class="character__additional-name">Тактическое
+                                умение: </span>Ускорение</li>
+                        <li class="character__additional-item"><span class="character__additional-name">Пассивное
+                                умение: </span>Регенерация</li>
+                        <li class="character__additional-item"><span class="character__additional-name">Ультимейт:
+                            </span>Батут</li>
                     </ul>
                 </aside>
             </div>
@@ -100,13 +107,16 @@
         <section class="abilities">
             <div class="container">
                 <div class="abilities__card">
-                    <img src="./src/img/icons/ability1.png" alt='Картинка Способности "Стимулятор"' class="abilities__image">
+                    <img src="./src/img/icons/ability1.png" alt='Картинка Способности "Стимулятор"'
+                        class="abilities__image">
                     <h2 class="abilities__title">Тактическое умение</h2>
                     <h3 class="abilities__subtitle">Стимулятор</h3>
-                    <p class="abilities__text">Увеличивает скорость движения на 30% на 6 сек, но тратит здоровье при активации</p>
+                    <p class="abilities__text">Увеличивает скорость движения на 30% на 6 сек, но тратит здоровье при
+                        активации</p>
                 </div>
                 <div class="abilities__card">
-                    <img src="./src/img/icons/ability2.png" alt='Картинка Способности "Регенрация"' class="abilities__image">
+                    <img src="./src/img/icons/ability2.png" alt='Картинка Способности "Регенрация"'
+                        class="abilities__image">
                     <h2 class="abilities__title">Пассивное умение</h2>
                     <h3 class="abilities__subtitle">Регенерация</h3>
                     <p class="abilities__text">Постепенно восстанавливает здоровье вне боя</p>
@@ -117,6 +127,72 @@
                     <h3 class="abilities__subtitle">Батут</h3>
                     <p class="abilities__text">Размещает портативный батут, который подбрасывает союзников в воздух</p>
                 </div>
+            </div>
+        </section>
+
+        <section class="special">
+            <div class="container">
+                <article class="special__article">
+                    <header class="special__header">
+                        <h2 class="special__title">ПАУЧИЙ АЖИАТАЖ</h2>
+                        <h3 class="special__subtitle">Приобретай специальное издание</h3>
+                    </header>
+
+                    <figure class="special__figure">
+                        <img src="src/img/images/section4-img.png" alt="акция! отдайте нам ваши деньги!" class="special__image">
+                        <figcaption  class="special__caption">Внешний вид контента, получаемого в игре</figcaption>
+                    </figure>
+
+                    <div class="special__inner">
+                        <p class="special__text">
+                            На арене вы либо хищник, либо жертва. Застаньте зазевавшихся противников врасплох с изданием
+                            Октейна, куда входят эксклюзивный облик легенды, набор тематических паучьих предметов и
+                            запас
+                            монет Apex, которым можно полакомиться так, как вам угодно.
+                        </p>
+
+                        <p class="special__text">
+                            Издание Октейна затаилось и ждет вас на Xbox One, PlayStation 4 и Origin для ПК, а скоро и в
+                            вашем любимом розничном магазине за 1,499 руб**. Вот всё, что бережно завёрнуто в паутину
+                            издания:
+                        </p>
+
+                        <p class="special__text">Издание Октейна</p>
+                    </div>
+
+                    <ul class="special__list">
+                        <li class="special__item">Легендарный облик «Паучий ажиотаж» для Октейна</li>
+                        <li class="special__item">Легендарная паучья раскраска для энерговинтовки</li>
+                        <li class="special__item">Эксклюзивный талисман для оружия «Фиолетовая вдова»</li>
+                        <li class="special__item">Эксклюзивная эмблема «Ядовитый»</li>
+                        <li class="special__item">1000 монет Apex</li>
+                    </ul>
+
+                    <footer class="special__footer special__inner">
+                        <p class="special__text">Играйте в Apex Legends бесплатно* на <mark class="special__mark">Xbox One, PlayStation 4 и в Origin для ПК.</mark></p>
+
+                        <p class="special__text">Следите за Apex Legends в Twitter и Instagram, подпишитесь на наш канал на YouTube и
+                            загляните
+                            на наши форумы.</p>
+
+                        <p class="special__text">
+                            Подпишитесь на новостную рассылку, чтобы получать последние новости об Apex Legends,
+                            закулисный
+                            контент, эксклюзивные предложения и многое другое (включая прочие новости EA, информацию о
+                            продуктах, событиях и акциях) по электронной почте.
+                        </p>
+
+                        <p class="special__text special__text--silent">* Может потребоваться учетная запись на соответствующей платформе и подписка платформы
+                            (продается отдельно). Требуется постоянное подключение к Интернету и учетная запись EA.
+                            Действуют возрастные ограничения. Включает в себя возможность совершать внутриигровые
+                            покупки.
+                        </p>
+
+                        <p class="special__text special__text--silent">**ПРЕДЛОЖЕНИЯ МОГУТ ОТЛИЧАТЬСЯ ИЛИ БЫТЬ ИЗМЕНЕНЫ. ПОДРОБНЕЕ НА ВЕБ-САЙТАХ И В РЕКЛАМЕ
+                            РОЗНИЧНЫХ
+                            ПРОДАВЦОВ</p>
+                    </footer>
+                </article>
             </div>
         </section>
     </main>
